

Current trunk
- build.properties and etc/opal.properties are move in .template file (LC)
- Open the output page in a new browser page (LC)
- Made the NBCR logo transparent (LC)
- Now the "Number of jobs currently running" chart is colored with different colors (LC) 
- Made the code compatible with java 1.4 (LC)
- updated the way opal handles symlinked working directories - now we do
  not need Tomcat to be on NFS (SK)
- now the charts use a thicker line (LC)
- patched some Boolean comparison in the jsp which caused errors with older jsp compiler (SK)
- improved the statistics page when a Data Based connection is not present (LC)
- the output files can now be retrieved as zip file if a parameter
  (data.archive) is set in the opal.properties (SK)
- in the summary page now displays the data lifetime which can be set in the opal.properties (LC)
- in the statistics page now there is a chart with the running jobs (LC)
- corrected the load-on-startup order of the various servlets which was causing a missing DB connection (LC)
- removed an error in the statistics page in the generation of the img URL of the various charts (LC)

1.9 alpha
- Opal Dashboard: it is a web based interface that provide an easy way to check the 
  status of the opal installation. 
- If an external database has been used the Dashboard can also display chart with 
  access and usage statistics
- Dynamic Interface Generation for Opal: This web based interface allows user to 
  invoke Opal based service directly from their browser. It is also possible to 
  create customized submission form based on the command line syntax


